--- a/www/comps/list.css
+++ b/www/comps/list.css
@@ -68,6 +68,9 @@
 	overflow:auto;
 	background-color:var(--color-bg);
 }
+.list .layoutTable.formInline{
+	border-right:1px solid var(--color-border);
+}
 .list .layoutTable table{
 	width:100%;
 }
@@ -247,6 +250,9 @@
 	overflow:auto;
 	align-content:flex-start;
 	border-top:1px solid var(--color-border);
+}
+.list .layoutCards.formInline{
+	border-right:1px solid var(--color-border);
 }
 .list .layoutCards .top-actions{
 	margin:0px 0px 16px 0px;
